--- a/map/index.html
+++ b/map/index.html
@@ -96,13 +96,13 @@
 
 <script>
 
-    var _header = document.querySelector('link[rel="import"]').import.querySelector("#_header");
-    document.getElementsByTagName("body")[0].appendChild(_header);
-
-    var header = new Vue({
-        el: "#header",
-        template: "#_header"
-    });
+//    var _header = document.querySelector('link[rel="import"]').import.querySelector("#_header");
+//    document.getElementsByTagName("body")[0].appendChild(_header);
+//
+//    var header = new Vue({
+//        el: "#header",
+//        template: "#_header"
+//    });
 
     var app = new Vue({
         el: '#app',
@@ -158,7 +158,7 @@
                     // 呼び方が悪いのか、レスポンスが返らないため、$httpは使用中止。
 //                this.$http.post("http://www.overpass-api.de/api/interpreter", data, function(data, status, request){});
 
-                    $.post( "https://www.overpass-api.de/api/interpreter", data, function( res) {
+                    var successHandler = function( res) {
                         // クエリパラメータで経緯度で範囲を指定しているが、おそらく細かい小数部分が考慮されないため、
                         // 微妙に域外の地点も含んだレスポンスが返ってくる。よって手動での絞り込みが必要。
                         self.cities = res.elements.filter(function(d){
@@ -179,16 +179,18 @@
 //                        });
 //                        m.addTo(map);
                             var data2 = self.$el.querySelector(".overpass-query2").textContent.replace(/\s+/g, '');
-                            $.post( "https://www.overpass-api.de/api/interpreter", data2, function( res) {
+                            var sh2 = function( res) {
                                 var tmp = res.elements.filter(function(d){
                                     return ids.indexOf(d.id) < 0
                                 });
                                 tmp = _.sample(tmp, 5);
                                 tmp.push(target);
                                 self.selection = _.shuffle(tmp);
-                            });
+                            }
+                            $.post( "//www.overpass-api.de/api/interpreter", data2, sh2);
                         }
-                    });
+                    }
+                    $.post( "//www.overpass-api.de/api/interpreter", data, successHandler);
                 });
             }
         }
