--- a/map/index.html
+++ b/map/index.html
@@ -187,10 +187,10 @@
                                 tmp.push(target);
                                 self.selection = _.shuffle(tmp);
                             }
-                            $.post( "//www.overpass-api.de/api/interpreter", data2, sh2);
+                            $.post( "https://www.overpass-api.de/api/interpreter", data2, sh2);
                         }
                     }
-                    $.post( "//www.overpass-api.de/api/interpreter", data, successHandler);
+                    $.post( "https://www.overpass-api.de/api/interpreter", data, successHandler);
                 });
             }
         }
