--- a/map/index.html
+++ b/map/index.html
@@ -190,11 +190,27 @@
                                 tmp.push(target);
                                 self.selection = _.shuffle(tmp);
                             }
-                            $.post( "https://www.overpass-api.de/api/interpreter", data2, sh2);
+//                            $.post( "https://www.overpass-api.de/api/interpreter", data2, sh2);
+                            $.ajax({
+                                url: "https://www.overpass-api.de/api/interpreter",
+                                type:"POST",
+                                data: data2,
+                                contentType:"application/json; charset=utf-8",
+                                dataType:"json",
+                                success: sh2
+                            });
                         }
                     }
-                    $.post( "https://www.overpass-api.de/api/interpreter", data, successHandler).fail(function(res) {
-                        console.log(res);
+//                    $.post("https://www.overpass-api.de/api/interpreter", data, successHandler).fail(function(res) {
+//                        console.log(res);
+//                    });
+                    $.ajax({
+                        url: "https://www.overpass-api.de/api/interpreter",
+                        type:"POST",
+                        data: data,
+                        contentType:"application/json; charset=utf-8",
+                        dataType:"json",
+                        success: successHandler,
                     });
                 });
             }
