--- a/map/index.html
+++ b/map/index.html
@@ -192,7 +192,7 @@
                             }
 //                            $.post( "https://www.overpass-api.de/api/interpreter", data2, sh2);
                             $.ajax({
-                                url: "https://www.overpass-api.de/api/interpreter",
+                                url: "https://overpass-api.de/api/interpreter",
                                 type:"POST",
                                 data: data2,
                                 contentType:"application/json; charset=utf-8",
@@ -208,7 +208,7 @@
 //                        console.log(res);
 //                    });
                     $.ajax({
-                        url: "https://www.overpass-api.de/api/interpreter",
+                        url: "https://overpass-api.de/api/interpreter",
                         type:"POST",
                         data: data,
                         contentType:"application/json; charset=utf-8",
