--- a/map/index.html
+++ b/map/index.html
@@ -204,20 +204,20 @@
                             });
                         }
                     }
-//                    $.post("https://www.overpass-api.de/api/interpreter", data, successHandler).fail(function(res) {
-//                        console.log(res);
-//                    });
-                    $.ajax({
-                        url: "https://overpass-api.de/api/interpreter",
-                        type:"POST",
-                        data: data,
-                        contentType:"application/json; charset=utf-8",
-                        dataType:"json",
-                        success: successHandler,
-                        error: function(res){
-                            console.log(res);
-                        }
+                    $.post("https://overpass-api.de/api/interpreter", data, successHandler).fail(function(res) {
+                        console.log(res);
                     });
+//                    $.ajax({
+//                        url: "https://overpass-api.de/api/interpreter",
+//                        type:"POST",
+//                        data: data,
+//                        contentType:"application/json; charset=utf-8",
+//                        dataType:"json",
+//                        success: successHandler,
+//                        error: function(res){
+//                            console.log(res);
+//                        }
+//                    });
                 });
             }
         }
