--- a/map/my-header.html
+++ b/map/my-header.html
@@ -1,4 +1,4 @@
-<template id="_header">
+<template>
     <nav class="navbar navbar-fixed-top" role="navigation">
         <div class="navbar-inner">
             <div class="container">
