--- a/histrip.html
+++ b/histrip.html
@@ -15,6 +15,8 @@
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/d3/3.3.9/d3.min.js"></script>
   <script type="text/javascript" src="https://cdnjs.cloudflare.com/ajax/libs/moment.js/2.22.2/moment.min.js"></script>
   <link rel="stylesheet" href="./css/histrip.css">
+  <link rel="stylesheet" href="//code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css">
+  <script src="https://code.jquery.com/ui/1.12.0/jquery-ui.min.js"></script>
 </head>
 <body>
 <div id="app">
@@ -59,9 +61,21 @@
     </div>
   </div>
 
+  <div class="range-time">
+    <div class="range-time-inner">
+      <p>
+        <label for="amount">Year Range:</label>
+        <input type="text" id="amount" readonly style="border:0; color:#f6931f; font-weight:bold;">
+      </p>
+      <div id="slider-range"></div>
+      <br>
+      <button class="btn btn-default" @click="setYear">Done</button>
+    </div>
+  </div>
+
   <div id="footer" class="col-xs-12 navbar-inverse navbar-fixed-bottom">
     <div class="row" id="bottomNav">
-      <div class="col-xs-4 text-center"><a href="#">year</a></div>
+      <div class="col-xs-4 text-center"><a href="#" @click="selectYear">year</a></div>
       <div class="col-xs-4 text-center"><a href="#" @click="show.genre = true">genre</a></div>
       <div class="col-xs-4 text-center"><a href="#">Link3</a></div>
     </div>
@@ -79,12 +93,35 @@
       genres: [true, false, false],
       show: {
         genre: false
-      }
+      },
+      data: []
     },
     methods:{
       hoge: function(genreIdx){
         this.genres[genreIdx] = !this.genres[genreIdx];
         this.$forceUpdate();
+      },
+      selectYear: function(){
+        $(".range-time").show();
+      },
+      setYear: function(){
+        console.log(this.data);
+        var values = $("#slider-range").slider( "values"); // => [762, 1950]
+        this.data.filter(function(d){
+          return d.syear < values[1] && d.eyear > values[0];
+        }).forEach(function(d){
+          if(d.marker){
+            d.marker.setOpacity(1);
+          }
+        });
+        this.data.filter(function(d){
+          return !(d.syear < values[1] && d.eyear > values[0]);
+        }).forEach(function(d){
+          if(d.marker){
+            d.marker.setOpacity(0);
+          }
+        });
+        $(".range-time").hide();
       }
     }
   });
@@ -186,15 +223,22 @@
         d.syear = d.eyear = moment.utc(d.datetime).year();
       }
     });
+    app.data = data;
+  });
 
-    setTimeout(function(){
-      data.filter(function(d){
-        return d.syear > 1970
-      }).forEach(function(d){
-        d.marker.setOpacity(0);
-      });
-    }, 3000);
-  })
+  $( function() {
+    $( "#slider-range" ).slider({
+      range: true,
+      min: 800,
+      max: 2000,
+      values: [ 1200, 1950 ],
+      slide: function( event, ui ) {
+        $( "#amount" ).val( ui.values[ 0 ] + "年 ～ " + ui.values[ 1 ] + "年");
+      }
+    });
+    $( "#amount" ).val("1200年 ～ 1950年");
+    $(".range-time").hide();
+  });
 
 </script>
 </body>
