--- a/histrip.html
+++ b/histrip.html
@@ -79,8 +79,8 @@
 
   <div id="footer" class="col-xs-12 navbar-inverse navbar-fixed-bottom">
     <div class="row" id="bottomNav">
-      <div class="col-xs-4 text-center"><a href="#" @click="selectYear">year</a></div>
-      <div class="col-xs-4 text-center"><a href="#" @click="showPerson()">Person</a></div>
+      <div class="col-xs-4 text-center"><a href="#" @click="selectYear">Year</a></div>
+      <div class="col-xs-4 text-center"><a href="#" @click="showPerson">Person</a></div>
       <div class="col-xs-4 text-center"><a href="#">Link3</a></div>
     </div>
   </div>
@@ -109,7 +109,9 @@
     },
     methods:{
       showPerson: function(){
+        console.log("showPerson!");
         this.show.person = true;
+        this.$forceUpdate();
         this.map.dragging.disable();
         this.map.touchZoom.disable();
         this.map.doubleClickZoom.disable();
