--- a/histrip.html
+++ b/histrip.html
@@ -81,7 +81,7 @@
     <div class="row" id="bottomNav">
       <div class="col-xs-4 text-center"><a href="#" @click="selectYear">Year</a></div>
       <div class="col-xs-4 text-center"><a href="#" @click="showPerson">Person</a></div>
-      <div class="col-xs-4 text-center"><a href="#">Link3</a></div>
+      <div class="col-xs-4 text-center"><a href="#">Genre</a></div>
     </div>
   </div>
 </div>
