--- a/histrip.html
+++ b/histrip.html
@@ -52,6 +52,11 @@
     </div>
   </nav>
 
+  <div v-if="video" style="width:100%;height:100%;text-align:center;">
+    <iframe width="100%" :src="video.url + '?autoplay=1&rel=0&controls=0'" frameborder="0" allowfullscreen></iframe>
+    <button class="btn btn-default" @click="video = null">close</button>
+  </div>
+
   <div id="stage">
     <div class="person" v-show="show.person">
       <div class="person-inner">
@@ -99,7 +104,10 @@
         person: false
       },
       data: [],
-      map: null
+      map: null,
+      video: {
+        url: "https://www.youtube.com/embed/FuFAJ4FDp5k"
+      }
     },
     created: function(){
       var self = this;
