--- a/histrip.html
+++ b/histrip.html
@@ -94,6 +94,13 @@
 
 <script>
 
+  var streetColors = [
+    "#194f90",
+    "#00919c",
+    "#8b0000",
+    "#de4307"
+  ];
+
   var app = new Vue({
     el: '#app',
     mounted: function(){
@@ -176,13 +183,6 @@
 
   tileLayer.addTo(map);
 
-  var streetColors = [
-      "#194f90",
-      "#00919c",
-      "#8b0000",
-      "#de4307"
-  ];
-
   // street
   d3.json("./data/street.json", function(data){
     console.log(data);
@@ -205,7 +205,7 @@
         return v.reverse();
       });
       var Line = L.polyline(baseCoordinates, {
-        "color": "#FF0000",
+        "color": streetColors[0],
         "weight": 5,
         "opacity": 0.6
       }).addTo(map);
@@ -215,7 +215,7 @@
         //  0.00000000000010
         return [v[0] + 0.002, v[1] + 0.005];
       }), {
-        "color": "blue",
+        "color": streetColors[1],
         "weight": 5,
         "opacity": 0.6
       }).addTo(map);
@@ -225,7 +225,7 @@
         //  0.00000000000010
         return [v[0] - 0.002, v[1] - 0.005];
       }), {
-        "color": "green",
+        "color": streetColors[2],
         "weight": 5,
         "opacity": 0.6
       }).addTo(map);
